--- a/index.html
+++ b/index.html
@@ -104,11 +104,9 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64 w3-black w3-text-white" id="about">
-  <h3 class="w3-center">About</h3>
+  <h3 class="w3-center">Meistä</h3>
   <p class="w3-center"><em></em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Juhlaboxin tavoitteena on tarjota helppo, nopea ja kätevä tapa viettää joulua. <br \> Suosikki juhlatuotteesi löytyvät jo valikoimastamme, joten turhia viimehetken ostosreissuja ei tarvitse tehdä.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Boxi A sisältöineen</b></p><br>
@@ -122,16 +120,16 @@ body, html {
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. (Hide on mobile view)</p>
     </div>
   </div>
-  <p class="w3-large w3-center w3-padding-16">Ratings:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>A</p>
+  <p class="w3-large w3-center w3-padding-16">Arvostelut:</p>
+  <p class="w3-wide"><i class="fa fa-camera"></i>Lehti A</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>B</p>
+  <p class="w3-wide"><i class="fa fa-laptop"></i>Lehti B</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>C</p>
+  <p class="w3-wide"><i class="fa fa-photo"></i>Yritys C</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
@@ -167,11 +165,11 @@ body, html {
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64 w3-black w3-text-white" id="Tilaa">
   <h3 class="w3-center">Tilausvalmiit vaihtoehdot</h3>
-  <p class="w3-center"><em>Tässä on joitakin valmiita boxejamme.<br> Klikkaa boxin kuvasta saadaksesi tietää lisää!</em></p><br>
+  <p class="w3-center"><em><br> </em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <button class="w3-center w3-button w3-red w3-block w3-text-black" onclick="window.open('tilaa.html');">Katso kaikki vaihtoehdot <span class="w3-hide-large"><br \></span>tai kokoa omasi painamalla tästä!</button>
-  <div class="w3-row-padding w3-center">
+  <!--Tässä on joitakin valmiita boxejamme.Klikkaa boxin kuvasta saadaksesi tietää lisää!<div class="w3-row-padding w3-center">
     <div class="w3-col m3">
       <img src="oma.png" style="filter:hue-rotate(0deg);" onclick="window.open('tilaa.html?p=1')" class="w3-hover-opacity tilaa wowimg" alt="Kokoa omasi">
     </div>
@@ -197,6 +195,8 @@ body, html {
     <div class="w3-col m3">
       <img src="boxiA.png" onclick="onClick(this)" class="w3-hover-opacity tilaa" alt="boxi A">
     </div>
+-->
+<!--
 
     <div class="w3-col m3">
       <img src="boxiA.png" onclick="onClick(this)" class="w3-hover-opacity tilaa" alt="boxi A">
@@ -206,6 +206,7 @@ body, html {
       <img src="boxiA.png" onclick="onClick(this)" class="w3-hover-opacity tilaa" alt="boxi A">
     </div>
   </div>
+-->
 </div>
 
 <!-- Modal for full size images on click-->
