--- a/tilaa.html
+++ b/tilaa.html
@@ -353,11 +353,11 @@ var hinnat = {
   // etc.
 }
 var tuotteet = {
-  "Jouluomena": "1€",
-  "Joulukuusi Pieni": "22€",
-  "Joulukuusi Normaali": "44€",
-  "Joulukuusi Iso": "66€",
-  "joulukuusen valot": "15€"
+  " <button class='w3-button w3-green w3-text-black' onclick='addC(0)'>+</button> Jouluomena": "1€",
+  " <button class='w3-button w3-green w3-text-black' onclick='addC(0)'>+</button> Joulukuusi Pieni": "22€",
+  " <button class='w3-button w3-green w3-text-black' onclick='addC(0)'>+</button> Joulukuusi Normaali": "44€",
+  " <button class='w3-button w3-green w3-text-black' onclick='addC(0)'>+</button> Joulukuusi Iso": "66€",
+  " <button class='w3-button w3-green w3-text-black' onclick='addC(0)'>+</button> joulukuusen valot": "15€"
   // etc.
 };
 var sisallot_ruoka = {
