--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64 w3-black w3-text-white" id="about">
-  <h3 class="w3-center">Meistä</h3>
+  <h2 class="w3-center">Meistä</h2>
   <p class="w3-center"><em></em></p>
-  <p>Juhlaboxin tavoitteena on tarjota helppo, nopea ja kätevä tapa viettää joulua. <br \> Suosikki juhlatuotteesi löytyvät jo valikoimastamme, joten turhia viimehetken ostosreissuja ei tarvitse tehdä.</p>
+    <h3 class="w3">Toimitamme täysvalmiita juhlapäiviä paketissa <h3 class="w3-text-green"> suoraan ovellesi.</h3></h3>
+    <hr \>
+<p>Juhlaboxin tavoitteena on tarjota helppo, nopea ja kätevä tapa viettää joulua. <br \> Suosikki juhlatuotteesi löytyvät jo valikoimastamme, joten turhia viimehetken ostosreissuja ei tarvitse tehdä.</p>
+
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Boxi A sisältöineen</b></p><br>
