--- a/tilaa.html
+++ b/tilaa.html
@@ -367,15 +367,15 @@ function addCP(num){
 var sisallot_ruoka = {
   "nu1": "<button class='w3-button w3-yellow w3-text-black' onclick='show3()'>+</button>",
   "nu2": "jouluruokaa",
-  "nu3": "kouluruokaa",
-  "nu4": "luolaruokaa"
+  "nu3": "joululaatikoita",
+  "nu4": "salaattipaketti"
   // etc.
 };
 var sisallot_muut = {
   "nu1": "+",
   "nu2": "kuusitarvikkeita",
-  "nu3": "stuff",
-  "nu4": "stuff2"
+  "nu3": "",
+  "nu4": "koristelukokoelma"
   // etc.
 };
 var sisallot_ruoka_nimi = {
