--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ function isHidden(el) {
 var acc2 = document.getElementsByClassName("wowimg");
 var i2;
 console.log(acc2);
-
+alert("Tämä sivusto on kouluprojekti, ei oikea tuote katso sivun alareuna lisä-infoa varten.");
 for (i2 = 0; i2 < acc2.length; i2++) {
   var newText = document.createElement("p");
   var node = document.createTextNode(acc2[i2].alt);
