--- a/tilaa.html
+++ b/tilaa.html
@@ -335,8 +335,7 @@ body, html {
 <script>
 console.log("made by Elias Eskelinen")
 console.log("This is a school project, not an actual product")
-
-alert("Tämä sivusto on kouluprojekti, ei oikea tuote katso sivun alareuna lisä-infoa varten.");
+alert("Tämä sivusto on kouluprojekti, ei oikea tuote. Katso sivun alareuna lisä-infoa varten.");
 var cart = [];
 //alert("sivu yhä työn alla.");
 var dict = {
